# ocr-rel

./: .gitignore  Dockerfile  README.md  docker-compose.yml  issue.md  pyproject.toml  reference.md
scripts/: check_services.py
src/ocr_rel/: __init__.py  config.py  logging_config.py  main.py
src/ocr_rel/api/: auth.py  deps.py  document_analysis.py  recognize.py  tasks.py  test_api.py
src/ocr_rel/auth/: __init__.py  token.py
src/ocr_rel/clients/: platform_callback.py  platform_file.py  platform_utils.py
src/ocr_rel/db/: __init__.py  database.py  repository.py
src/ocr_rel/llm/: client.py  extractor.py  images.py  prompts.py  validator.py  vision.py
src/ocr_rel/models/: __init__.py  schemas.py
src/ocr_rel/ocr/: aliyun_engine.py  base.py  local_engine.py  paddle_engine.py  seal_region.py  service.py
src/ocr_rel/parsers/: base.py  registry.py  text_utils.py  (+9 more)
tests/: conftest.py  test_aliyun_engine.py  test_api.py  test_audit_report_ocr.py  test_auth.py  test_business_license_ocr.py  test_callback_serializer.py  test_capital_verification_ocr.py  test_converter.py  test_document_validator.py  test_grade_protection_ocr.py  test_health.py  test_llm_extraction.py  test_llm_images.py  test_llm_vision.py  test_local_file_store.py  test_local_ocr.py  test_parsers.py  test_seal_region.py  test_task_persistence.py  test_task_queue.py  test_text_utils.py  test_type3_audit_report.py  test_type4_capital_verification.py  test_type5_employee_id.py  test_type6_grade_protection.py  test_type7_credit_report.py  test_type8_credit_proof.py  test_upload_storage.py
(+18 files in other folders)
