[project]
name = "ocr-rel"
version = "0.1.0"
description = "AI OCR recognition service for electricity trading registration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "pymupdf>=1.25.0",
    "pillow>=11.0.0",
    "paddleocr>=2.9.0",
    "paddlepaddle>=3.0.0",
    "alibabacloud_ocr_api20210707>=3.1.0",
    "alibabacloud_tea_openapi>=0.3.12",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ocr_rel = ["static/**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
